--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <h2>YAY! 🎉</h2>
       <img
         class="fireworks"
-        src="https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif"
+        src="https://share.google/JgT9pCDSEtOPCk9Vh"
         alt="Fireworks"
       />
     </section>
