--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <h2>YAY! 🎉</h2>
       <img
         class="fireworks"
-        src="https://share.google/JgT9pCDSEtOPCk9Vh"
+        src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYWZnem9pYm9wOWlyN2ZvOW0xeGttaHdqNGluYnd4emUwaWZ3aHZreCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/lMsT2f47tDxFMYdJMC/giphy.gif"
         alt="Fireworks"
       />
     </section>
